[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
cgmath = "0.18.0"
image = "0.24.5"
pollster = "0.2.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = "0.14.2"
winit = "0.27.5"
